--- a/src/app/modules/form/components/form/form.component.html
+++ b/src/app/modules/form/components/form/form.component.html
@@ -1,1 +1,67 @@
-<h1>form works!</h1>
+<div id="form-container">
+    <form [formGroup]="profileForm" class="form-container">
+        <mat-card>
+    
+          <mat-card-header>
+            <mat-card-title>Profile Information</mat-card-title>
+          </mat-card-header>
+    
+          <mat-card-content>
+            <div class="row">
+    
+              <div>
+                <mat-form-field class="full-width">
+                    <input matInput placeholder="First Name" formControlName="firstName">
+                </mat-form-field>
+              </div>
+    
+              <div>
+                <mat-form-field class="full-width">
+                    <input matInput placeholder="Last Name" formControlName="lastName">
+                </mat-form-field>
+              </div>
+    
+            </div>
+    
+            <div class="row">
+              <div>
+               <mat-form-field class="full-width">
+                <input matInput type="number" placeholder="Age" formControlName="age">
+               </mat-form-field>
+              </div>
+              
+              <div>
+                <mat-checkbox class="full-width" formControlName="prevAttended">Previously Attended</mat-checkbox>               
+                </div>
+    
+            </div>
+    
+            <div class="row">
+                <div>
+                    <div>
+                        <mat-radio-group formControlName="sport">
+                            <mat-radio-button *ngFor="let sport of sports" [value]="sport">{{ sport }}</mat-radio-button>
+                        </mat-radio-group>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="row">
+                <div>
+                    <div>
+                        <mat-form-field class="full-width">
+                            <textarea matInput placeholder="Comment" formControlName="comment"></textarea>
+                        </mat-form-field>
+                    </div>
+                </div>
+            </div>
+    
+          </mat-card-content>
+    
+          <mat-card-actions>
+            <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
+          </mat-card-actions>
+    
+        </mat-card>
+    </form>
+</div>
