--- a/src/app/modules/form/components/form/form.component.scss
+++ b/src/app/modules/form/components/form/form.component.scss
@@ -1,4 +1,13 @@
+p{
+    margin: 0;
+    padding: 0;
+}
+
 .full-width{
     width: 97%;
 }
 
+.form-container {
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
