feat: updated homepage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <router-outlet></router-outlet>
 
-  <footer fxLayout="column" fxLayoutAlign="center center" style="position: absolute; bottom: 0; width: 100%; background-color: #eee; padding: 20px;">
+  <footer id="footer" fxLayout="column" fxLayoutAlign="center center">
     <p style="margin: 0;">2023 Martin Pekny</p>
     <a href="https://github.com/Maperti8" target="_blank">GitHub</a>
   </footer>
