--- a/src/app/modules/form/components/form/form.component.html
+++ b/src/app/modules/form/components/form/form.component.html
@@ -1,22 +1,25 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="form-container">
-    <form [formGroup]="profileForm" class="form-container" fxLayout="column" fxLayout.lt-md="row" fxLayoutAlign="center start" fxFlex="100%">
-      <mat-card fxFlex.lt-md="90%" fxFlex="70%">
-  
-        <mat-card-header>
-          <mat-card-title>Profile Information</mat-card-title>
-        </mat-card-header>
-  
-        <mat-card-content>
-          <div class="row">
-            <div fxFlex="50%">
+  <form [formGroup]="profileForm" class="form-container" fxLayout="column" fxLayout.lt-md="column" fxLayoutAlign="center start" fxFlex="100%">
+    <mat-card fxFlex.lt-md="90%" fxFlex="70%">
+
+      <mat-card-header>
+        <mat-card-title>Profile Information</mat-card-title>
+      </mat-card-header>
+
+      <mat-card-content>
+        <div fxLayout="column" fxLayout.lt-md="column">
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <mat-form-field class="full-width" appearance="fill">
                 <input matInput placeholder="First Name" formControlName="firstName">
                 <mat-error *ngIf="profileForm.get('firstName')?.hasError('required')">First Name is required</mat-error>
                 <mat-error *ngIf="profileForm.get('firstName')?.hasError('maxlength')">Maximum length is 25 characters</mat-error>
               </mat-form-field>
             </div>
-  
-            <div fxFlex="50%">
+          </div>
+
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <mat-form-field class="full-width" appearance="fill">
                 <input matInput placeholder="Last Name" formControlName="lastName">
                 <mat-error *ngIf="profileForm.get('lastName')?.hasError('required')">Last Name is required</mat-error>
@@ -24,26 +27,29 @@
               </mat-form-field>
             </div>
           </div>
-  
-          <div class="row">
-            <div fxFlex="100%">
+
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <mat-form-field class="full-width" appearance="fill">
                 <input matInput type="number" placeholder="Age" formControlName="age">
                 <mat-error *ngIf="profileForm.get('age')?.hasError('required')">Age is required</mat-error>
                 <mat-error *ngIf="profileForm.get('age')?.hasError('min')">Age must be a non-negative number</mat-error>
               </mat-form-field>
             </div>
-            <div fxFlex="50%">
+          </div>
+
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <mat-checkbox class="full-width" formControlName="prevAttended" color="primary"><p>Previously attended</p></mat-checkbox>
             </div>
           </div>
-  
-          <div class="row">
+
+          <div class="row" fxLayout.lt-md="column">
             <p>Preferred sport:</p>
           </div>
-  
-          <div class="row">
-            <div fxFlex="100%">
+
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <div>
                 <mat-radio-group formControlName="sport">
                   <mat-radio-button *ngFor="let sport of sports" [value]="sport" color="primary">{{ sport }}</mat-radio-button>
@@ -54,9 +60,9 @@
               </div>
             </div>
           </div>
-  
-          <div class="row">
-            <div fxFlex="100%">
+
+          <div class="row" fxLayout.lt-md="column">
+            <div fxFlex="100" fxLayout.lt-md="100%">
               <div>
                 <mat-form-field class="full-width" appearance="fill">
                   <textarea matInput placeholder="Comment" formControlName="comment"></textarea>
@@ -65,14 +71,14 @@
               </div>
             </div>
           </div>
-        </mat-card-content>
-        
-        <div class="row"></div>
-        <mat-card-actions>
-          <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
-        </mat-card-actions>
-  
-      </mat-card>
-    </form>
-  </div>
-  
+        </div>
+      </mat-card-content>
+
+      <div class="row"></div>
+      <mat-card-actions>
+        <button (click)="onSubmit()" mat-raised-button color="primary">Submit</button>
+      </mat-card-actions>
+
+    </mat-card>
+  </form>
+</div>
